feat: 取得票種API完成
